--- a/index.html
+++ b/index.html
@@ -5,14 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parshuram Kumar - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Parshuram Kumar</h1>
-            <h2>Software Engineer</h2>
-            <p>Results-driven Software Engineer with over 2.6 years of experience specializing in web development using various technologies.</p>
-            <p><a href="https://www.linkedin.com/in/parshuram-kumar-25b8ba171/" target="_blank">LinkedIn Profile</a></p>
+            <div class="header-content">
+                <h1>Parshuram Kumar</h1>
+                <h2>Software Engineer</h2>
+                <p>Results-driven Software Engineer with over 2.6 years of experience specializing in web development using various technologies.</p>
+                <p><a href="https://www.linkedin.com/in/parshuram-kumar-25b8ba171/" target="_blank" class="btn">Visit My LinkedIn</a></p>
+            </div>
         </div>
     </header>
 
