--- a/index.html
+++ b/index.html
@@ -5,64 +5,78 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parshuram Kumar - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <header>
+    <nav>
         <div class="container">
-            <div class="header-content">
-                <h1>Parshuram Kumar</h1>
-                <h2>Software Engineer</h2>
-                <p>Results-driven Software Engineer with over 2.6 years of experience specializing in web development using various technologies.</p>
-                <p><a href="https://www.linkedin.com/in/parshuram-kumar-25b8ba171/" target="_blank" class="btn">Visit My LinkedIn</a></p>
-            </div>
+            <h1 class="logo">Parshuram Kumar</h1>
+            <ul>
+                <li><a href="#about">About</a></li>
+                <li><a href="#projects">Projects</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </div>
+    </nav>
+
+    <header class="hero-section">
+        <div class="container">
+            <h2 class="fade-in">Hello, I'm Parshuram Kumar</h2>
+            <h3 class="slide-in">I build things for the web.</h3>
+            <p class="fade-in">I'm a Software Engineer with over 2.6 years of experience specializing in building and designing exceptional digital experiences.</p>
+            <a href="#projects" class="btn pulse">View My Work</a>
         </div>
     </header>
 
-    <section class="technical-skills">
+    <section id="about" class="about-section">
         <div class="container">
-            <h3>Technical Skills</h3>
-            <ul>
-                <li>HTML, CSS, JavaScript, jQuery</li>
-                <li>PHP, Laravel, ReactJS, NodeJS, AJAX</li>
-                <li>MySQL, MongoDB</li>
-                <li>OutSystems, Git, RESTful APIs</li>
-                <li>Moodle</li>
+            <h2 class="section-title">About Me</h2>
+            <p class="fade-in">I'm a passionate software engineer with expertise in web development. I enjoy creating things that live on the internet, whether that be websites, applications, or anything in between. My goal is to always build products that provide pixel-perfect, performant experiences.</p>
+            <p class="fade-in">Here are a few technologies I've been working with recently:</p>
+            <ul class="skills-list fade-in">
+                <li>JavaScript (ES6+)</li>
+                <li>ReactJS</li>
+                <li>Node.js</li>
+                <li>PHP & Laravel</li>
+                <li>MySQL & MongoDB</li>
+                <li>OutSystems</li>
             </ul>
         </div>
     </section>
 
-    <section class="projects">
+    <section id="projects" class="projects-section">
         <div class="container">
-            <h3>Key Projects</h3>
-            <div class="project">
-                <h4>Blog Management Application</h4>
-                <p>Developed a user management system with full CRUD functionality for complex user profiles and permissions using ReactJS, Node.js, and MongoDB.</p>
+            <h2 class="section-title">Some Things I've Built</h2>
+            <div class="project slide-in">
+                <h3>Blog Management Application</h3>
+                <p>A user management system with full CRUD functionality for complex user profiles and permissions using ReactJS, Node.js, and MongoDB.</p>
             </div>
-            <div class="project">
-                <h4>Skill Berry</h4>
-                <p>Developed a job portal with AI-generated job proposals using Laravel and ChatGPT.</p>
+            <div class="project slide-in">
+                <h3>Skill Berry</h3>
+                <p>A job portal with AI-generated job proposals using Laravel and ChatGPT.</p>
             </div>
-            <div class="project">
-                <h4>HelloHungry Meals</h4>
-                <p>Created a system for users to buy food online using Laravel and MySQL.</p>
+            <div class="project slide-in">
+                <h3>HelloHungry Meals</h3>
+                <p>A system for users to buy food online using Laravel and MySQL.</p>
             </div>
-            <div class="project">
-                <h4>Employee Management Admin Panel</h4>
-                <p>Designed and implemented a comprehensive employee management system using OutSystems.</p>
+            <div class="project slide-in">
+                <h3>Employee Management Admin Panel</h3>
+                <p>A comprehensive employee management system using OutSystems.</p>
             </div>
-            <div class="project">
-                <h4>Moodle Integration</h4>
-                <p>Integrated Moodle with GEMS to synchronize student information and course enrollment using PHP and RESTful APIs.</p>
+            <div class="project slide-in">
+                <h3>Moodle Integration</h3>
+                <p>Integration of Moodle with GEMS to synchronize student information and course enrollment using PHP and RESTful APIs.</p>
             </div>
         </div>
     </section>
 
-    <section class="experience-education">
+    <section id="experience" class="experience-section">
         <div class="container">
-            <h3>Experience & Education</h3>
-            <div class="experience">
-                <h4>Associate Software Engineer</h4>
+            <h2 class="section-title">Where I've Worked</h2>
+            <div class="experience fade-in">
+                <h3>Associate Software Engineer</h3>
                 <p>Silicon Valley Infomedia Pvt Ltd | February 2022 - Present</p>
                 <ul>
                     <li>Led the development and maintenance of high-performance web applications using PHP and Laravel.</li>
@@ -72,18 +86,25 @@
                     <li>Mentored junior developers and conducted code reviews to maintain high coding standards.</li>
                 </ul>
             </div>
-            <div class="education">
-                <h4>Bachelor of Computer Applications (BCA)</h4>
-                <p>ACET Amritsar, Punjab | April 2021</p>
-                <h4>Intermediate Education (12th)</h4>
-                <p>High School Shahpur Nawada, Bihar | March 2018</p>
-            </div>
+        </div>
+    </section>
+
+    <section id="contact" class="contact-section">
+        <div class="container">
+            <h2 class="section-title">Get In Touch</h2>
+            <p class="fade-in">I'm currently open to new opportunities. Whether you have a question or just want to say hi, feel free to reach out!</p>
+            <a href="mailto:pkumarskp4@gmail.com" class="btn pulse">Say Hello</a>
         </div>
     </section>
 
     <footer>
         <div class="container">
-            <p>Contact: +91 6202731971 | pkumarskp4@gmail.com | Gurukul Road, Ahmedabad</p>
+            <ul class="social-links">
+                <li><a href="https://www.linkedin.com/in/parshuram-kumar-25b8ba171/" target="_blank" class="btn">Visit My LinkedIn</a></li>
+                <!-- <li><a href="#"><i class="fab fa-github"></i></a></li> -->
+                <!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
+            </ul>
+            <p>&copy; 2024 Parshuram Kumar. All rights reserved.</p>
         </div>
     </footer>
 </body>
