Changes made in portspolio

--- a/index.html
+++ b/index.html
@@ -49,25 +49,32 @@
     <section id="projects" class="projects-section">
         <div class="container">
             <h2 class="section-title">Some Things I've Built</h2>
+           
             <div class="project slide-in">
-                <h3>Blog Management Application</h3>
-                <p>A user management system with full CRUD functionality for complex user profiles and permissions using ReactJS, Node.js, and MongoDB.</p>
-            </div>
-            <div class="project slide-in">
-                <h3>Skill Berry</h3>
-                <p>A job portal with AI-generated job proposals using Laravel and ChatGPT.</p>
+                <h3>Putpocketi</h3>
+                <p>Create a website where users can recharge
+                    their phones or TVs using wallet balance.</p>
             </div>
             <div class="project slide-in">
                 <h3>HelloHungry Meals</h3>
                 <p>A system for users to buy food online using Laravel and MySQL.</p>
             </div>
             <div class="project slide-in">
-                <h3>Employee Management Admin Panel</h3>
-                <p>A comprehensive employee management system using OutSystems.</p>
+                <h3>Skill Berry</h3>
+                <p>A job portal with AI-generated job proposals using Laravel and ChatGPT.</p>
             </div>
+            <div class="project slide-in">
+                <h3>Employee Management Admin Panel</h3>
+                <p>A comprehensive employee management system using OutSystems and implemented Dynamic form developement.</p>
+            </div>
+           
             <div class="project slide-in">
                 <h3>Moodle Integration</h3>
                 <p>Integration of Moodle with GEMS to synchronize student information and course enrollment using PHP and RESTful APIs.</p>
+            </div>
+            <div class="project slide-in">
+                <h3>Blog Management Application</h3>
+                <p>A user management system with full CRUD functionality for complex user profiles and permissions using ReactJS, Node.js, and MongoDB.</p>
             </div>
         </div>
     </section>
