Changes made in portspolio

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,6 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 </head>
+
 <body>
     <nav>
         <div class="container">
@@ -25,7 +27,8 @@
         <div class="container">
             <h2 class="fade-in">Hello, I'm Parshuram Kumar</h2>
             <h3 class="slide-in">I build things for the web.</h3>
-            <p class="fade-in">I'm a Software Engineer with over 2.6 years of experience specializing in building and designing exceptional digital experiences.</p>
+            <p class="fade-in">I'm a Software Engineer with over 2.6 years of experience specializing in building and
+                designing exceptional digital experiences.</p>
             <a href="#projects" class="btn pulse">View My Work</a>
         </div>
     </header>
@@ -33,7 +36,9 @@
     <section id="about" class="about-section">
         <div class="container">
             <h2 class="section-title">About Me</h2>
-            <p class="fade-in">I'm a passionate software engineer with expertise in web development. I enjoy creating things that live on the internet, whether that be websites, applications, or anything in between. My goal is to always build products that provide pixel-perfect, performant experiences.</p>
+            <p class="fade-in">I'm a passionate software engineer with expertise in web development. I enjoy creating
+                things that live on the internet, whether that be websites, applications, or anything in between. My
+                goal is to always build products that provide pixel-perfect, performant experiences.</p>
             <p class="fade-in">Here are a few technologies I've been working with recently:</p>
             <ul class="skills-list fade-in">
                 <li>JavaScript (ES6+)</li>
@@ -49,7 +54,7 @@
     <section id="projects" class="projects-section">
         <div class="container">
             <h2 class="section-title">Some Things I've Built</h2>
-           
+
             <div class="project slide-in">
                 <h3>Putpocketi</h3>
                 <p>Create a website where users can recharge
@@ -65,16 +70,19 @@
             </div>
             <div class="project slide-in">
                 <h3>Employee Management Admin Panel</h3>
-                <p>A comprehensive employee management system using OutSystems and implemented Dynamic form developement.</p>
+                <p>A comprehensive employee management system using OutSystems and implemented Dynamic form
+                    developement.</p>
             </div>
-           
+
             <div class="project slide-in">
                 <h3>Moodle Integration</h3>
-                <p>Integration of Moodle with GEMS to synchronize student information and course enrollment using PHP and RESTful APIs.</p>
+                <p>Integration of Moodle with GEMS to synchronize student information and course enrollment using PHP
+                    and RESTful APIs.</p>
             </div>
             <div class="project slide-in">
                 <h3>Blog Management Application</h3>
-                <p>A user management system with full CRUD functionality for complex user profiles and permissions using ReactJS, Node.js, and MongoDB.</p>
+                <p>A user management system with full CRUD functionality for complex user profiles and permissions using
+                    ReactJS, Node.js, and MongoDB.</p>
             </div>
         </div>
     </section>
@@ -85,13 +93,19 @@
             <div class="experience fade-in">
                 <h3>Associate Software Engineer</h3>
                 <p>Silicon Valley Infomedia Pvt Ltd | February 2022 - Present</p>
-                <ul>
-                    <li>Led the development and maintenance of high-performance web applications using PHP and Laravel.</li>
-                    <li>Engineered RESTful APIs for seamless integration with third-party services.</li>
-                    <li>Optimized database operations using MySQL and MongoDB to ensure data integrity and performance.</li>
-                    <li>Collaborated with product managers and designers to deliver user-friendly and responsive interfaces.</li>
-                    <li>Mentored junior developers and conducted code reviews to maintain high coding standards.</li>
-                </ul>
+                <div class="container">
+                    <ul>
+                        <li>Led the development and maintenance of high-performance web applications using PHP and
+                            Laravel.</li>
+                        <li>Engineered RESTful APIs for seamless integration with third-party services.</li>
+                        <li>Optimized database operations using MySQL and MongoDB to ensure data integrity and
+                            performance.</li>
+                        <li>Collaborated with product managers and designers to deliver user-friendly and responsive
+                            interfaces.</li>
+                        <li>Mentored junior developers and conducted code reviews to maintain high coding standards.
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </section>
@@ -99,7 +113,8 @@
     <section id="contact" class="contact-section">
         <div class="container">
             <h2 class="section-title">Get In Touch</h2>
-            <p class="fade-in">I'm currently open to new opportunities. Whether you have a question or just want to say hi, feel free to reach out!</p>
+            <p class="fade-in">I'm currently open to new opportunities. Whether you have a question or just want to say
+                hi, feel free to reach out!</p>
             <a href="mailto:pkumarskp4@gmail.com" class="btn pulse">Say Hello</a>
         </div>
     </section>
@@ -107,7 +122,8 @@
     <footer>
         <div class="container">
             <ul class="social-links">
-                <li><a href="https://www.linkedin.com/in/parshuram-kumar-25b8ba171/" target="_blank" class="btn">Visit My LinkedIn</a></li>
+                <li><a href="https://www.linkedin.com/in/parshuram-kumar-25b8ba171/" target="_blank" class="btn">Visit
+                        My LinkedIn</a></li>
                 <!-- <li><a href="#"><i class="fab fa-github"></i></a></li> -->
                 <!-- <li><a href="#"><i class="fab fa-twitter"></i></a></li> -->
             </ul>
@@ -115,4 +131,5 @@
         </div>
     </footer>
 </body>
+
 </html>
