chnages for the new cotent

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                     <img src="assets/images/skillberry.png" class="rounded-t-lg" alt="Project 3">
                     <div class="p-4">
                         <h5 class="text-xl font-semibold">Skillberry</h5>
-                        <p>A platform that connects learners with skilled professionals for online courses.</p>
+                        <p>A portal for AI-powered hiring processes, connecting employers with the right candidates.</p>
                         <p class="text-sm text-yellow-400">Tech Used: Laravel, Bootstrap, JavaScript</p>
                     </div>
                 </div>
